--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-assets: AAPL # comma seperated values: AAPL, @DOGE, MSFT
+assets: AAPL, MSFT # comma seperated values: AAPL, @DOGE, MSFT
 streamer: dummy # options are: dummy, yahoo, polygon, alpaca
 broker: paper # options are: paper, alpaca
 # secret: secret.yaml # path to a file holding polygon or alpaca api tokens if needed
